# orengine

./: .dockerignore  .gitignore  BEFORE_MERGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile_client  Dockerfile_server  Dockerfile_test  Dockerfile_test_freebsd  Dockerfile_test_linux  Dockerfile_test_macos  Dockerfile_test_windows  README.md  docker-compose.yaml  log.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
benchmarks/: README.md
benchmarks/cpu_bound/: Cargo.toml  README.md  compose.yaml
benchmarks/cpu_bound/src/: main.rs  tools.rs
benchmarks/cpu_bounded/: Cargo.toml  Dockerfile  Dockerfile-bullseye  README.md  compose.yaml
benchmarks/cpu_bounded/src/: main.rs  tools.rs
benchmarks/fs/: Cargo.toml  Dockerfile-alpine  Dockerfile-bullseye  README.md  compose.yaml
benchmarks/fs/src/: main.rs
benchmarks/net/: compose.yaml
benchmarks/net/client/: Cargo.toml
benchmarks/net/server/: Cargo.toml  Dockerfile-alpine
benchmarks/net/tcp/: README.md  compose.yaml
benchmarks/tools/: Cargo.toml
benchmarks/tools/src/: lib.rs
doc/: README.md  SUMMARY.md  contributing.md  orengine-macros.md
doc/.github/issue_template/: feature_request.md
doc/benchmarks/: README.md  cpu_bound.md
doc/benchmarks/net/: tcp.md
examples/echo-server/: Cargo.toml
examples/echo-server/src/: main.rs
examples/fs/: Cargo.toml
examples/fs/src/: main.rs
examples/test/: Cargo.toml
examples/test/src/: lib.rs  main.rs
orengine-macros/: Cargo.toml  LICENSE  README.md
orengine-macros/src/: lib.rs
src/: atomic_task_queue.rs  bug_message.rs  end.rs  lib.rs  local.rs  local_pool.rs  run.rs  sleep.rs  sync_task_queue.rs  yield_now.rs
src/buf/: buf_pool.rs  buffer.rs  io_buffer.rs  mod.rs
src/buf/linux/: linux_buffer.rs
src/cfg/: mod.rs
src/fs/: dir_builder.rs  file.rs  mod.rs  open_options.rs  shortcuts.rs  test_helper.rs
src/io/: as_path.rs  close.rs  config.rs  io_request.rs  io_request_data.rs  io_sleeping_task.rs  mod.rs  time_bounded_io_task.rs  worker.rs
src/io/buf/: buf_pool.rs  buffer.rs  fixed_io_buffer.rs  mod.rs  sendable_buffer.rs  slice.rs  tests.rs  with_buffer.rs
src/io/fs/: create_dir.rs  fallocate.rs  mod.rs  open.rs  read.rs  remove.rs  remove_dir.rs  rename.rs  sync_all.rs  sync_data.rs  write.rs
src/io/io-macros/: Cargo.toml
src/io/net/: accept.rs  bind.rs  connect.rs  mod.rs  peek.rs  peek_from.rs  poll_fd.rs  recv.rs  recv_from.rs  send.rs  send_to.rs  shutdown.rs  socket.rs
src/io/sys/: mod.rs
src/local/: local.rs  mod.rs  pool.rs  scope.rs
src/local_pool/: mod.rs  pool.rs  unstable_pool.rs
src/messages/: mod.rs
src/net/: bind_config.rs  connected_datagram.rs  creators_of_sockets.rs  datagram.rs  get_socket.rs  listener.rs  mod.rs  socket.rs  stream.rs  unsupport.rs
src/net/addr/: from_sock_addr.rs  into_sock_addr.rs  mod.rs  to_sock_addrs.rs
src/net/tcp/: listener.rs  mod.rs  stream.rs
src/net/udp/: connected_socket.rs  mod.rs  socket.rs
src/net/unix/: addr.rs  bind_config.rs  connected_datagram.rs  connected_socket_datagram.rs  datagram.rs  listener.rs  mod.rs  path_connected_datagram.rs  path_datagram.rs  path_listener.rs  path_socket.rs  path_stream.rs  socket_datagram.rs  stream.rs  unix_impl_socket.rs
src/runtime/: asyncify.rs  call.rs  config.rs  end.rs  end_local_thread_and_write_into_ptr.rs  engine.rs  executer.rs  executor.rs  executors_on_cores_table.rs  get_task_from_context.rs  global_state.rs  local_thread_pool.rs  mod.rs  notification.rs  task.rs  task_pool.rs  waker.rs
src/runtime/asyncify/: asyncify.rs  mod.rs
src/runtime/call/: call.rs  mod.rs
src/runtime/executor/: config.rs  end_local_thread_and_write_into_ptr.rs  executor.rs  executors_on_cores_table.rs  mod.rs
src/runtime/global_state/: global_state.rs  mod.rs  subscribed_state.rs
src/runtime/interaction_between_executors/: interactor.rs  mod.rs  (+2 more)
src/sleep/: mod.rs  sleep.rs  sleeping_task.rs
src/sync/: channel.rs  cond_var.rs  lazy_lock.rs  mod.rs  mutex.rs  mutex_todo  mutex_trait.rs  naive_cond_var.rs  naive_mutex.rs  naive_rw_lock.rs  naive_rwlock.rs  once.rs  scope.rs  wait_group.rs
src/test/: executor_pool.rs  executor_thread_spawner.rs  mod.rs  runner.rs
src/test-macro/: Cargo.toml
src/thread_pool/: mod.rs
src/utils/: addr_from_to_socket_addrs.rs  assert_hint.rs  core.rs  droppable_element.rs  each_addr.rs  global_test_lock.rs  hide_unsafe.rs  mod.rs  never_wait_lock.rs  path_to_c_string.rs  progressive_timeout.rs  ptr.rs  sealed.rs  spin_lock.rs  task_structures_pool.rs  vec_map.rs  write_result.rs
(+100 files in other folders)
