[package]
name = "orengine"
version = "0.6.1-alpha.5"
license = "MIT"
description = """
Optimized ring engine for Rust.
It is a lighter and faster asynchronous library than tokio-rs, async-std, may, and even smol.
"""

rust-version = "1.80.0"
authors = ["Eugene Usachev <https://github.com/Eugene-Usachev> and orengine contributors <team@orengine>"]
readme = "README.md"
repository = "https://github.com/orengine/orengine"
categories = ["asynchronous", "network-programming", "concurrency", "web-programming"]
keywords = ["io", "async", "non-blocking", "shared-nothing", "high-performance"]
edition = "2021"

[dependencies]
orengine-macros = { version = "4.0.0", path = "./orengine-macros" }
core_affinity = "0.8.1"
socket2 = { version = "0.5.7", features = ["all"] }
smallvec = "2.0.0-alpha.7"
ahash = "0.8.11"
fastrand = "2.1.1"
crossbeam = "0.8.4"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["net", "event"] }