[package]
name = "orengine"
version = "0.8.0-alpha.1"
license = "MIT"
description = """
Optimized ring engine for Rust.
It is a lighter and faster asynchronous library than tokio-rs, async-std, may, and even smol.
"""

rust-version = "1.83.0"
authors = ["Eugene Usachev <https://github.com/Eugene-Usachev> and orengine contributors <team@orengine>"]
readme = "README.md"
repository = "https://github.com/orengine/orengine"
categories = ["asynchronous", "network-programming", "concurrency", "web-programming"]
keywords = ["io", "async", "non-blocking", "shared-nothing", "high-performance"]
edition = "2021"

[features]
fallback_thread_pool = []

[dependencies]
orengine-macros = { version = "4.1.0", path = "./orengine-macros" }
core_affinity = "0.8.1"
socket2 = { version = "0.5.7", features = ["all"] }
smallvec = "2.0.0-alpha.7"
ahash = "0.8.11"
fastrand = "2.1.1"
crossbeam = "0.8.4"
libc = "0.2.169"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.52.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
positioned-io = "0.3.3"
mio = { version = "1.0.3", features = ["net", "os-ext", "os-poll", "default"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.0"